<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.detail.DetailFilmActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/toolbar"
        app:layout_constraintVertical_bias="0"
        tools:title="Judul" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        android:id="@+id/containerDetail"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="1dp"
        android:elevation="@dimen/cardview_default_elevation"
        style="@style/Widget.MaterialComponents.CardView">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                style="@style/MovieCatalog.TextView.Large"
                android:maxLines="2"
                android:ellipsize="end"
                tools:text="This is for title that Film have"
                android:textStyle="bold"
                android:id="@+id/tvTitle"/>
            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="150dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/imgPoster"
                app:layout_constraintHorizontal_bias="0"
                app:round="8dp"
                android:layout_marginTop="8dp"
                tools:src="@android:color/darker_gray"
                app:layout_constraintVertical_bias="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/imgPoster"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:text="@string/release_date"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:id="@+id/tvTagReleaseDate"
                style="@style/MovieCatalog.TextView.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTagReleaseDate"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:text="@string/release_date"
                android:layout_marginStart="8dp"
                android:id="@+id/tvReleaseDate"
                style="@style/MovieCatalog.TextView"
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:text="@string/genre"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:id="@+id/tvTagGenre"
                android:layout_marginTop="8dp"
                style="@style/MovieCatalog.TextView.Medium"/>
            <com.google.android.material.chip.ChipGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTagGenre"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:id="@+id/chipGroup"
                style="@style/Widget.MaterialComponents.ChipGroup"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/chipGroup"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0"
                android:text="@string/rating"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:id="@+id/tvTagRating"
                android:layout_marginTop="8dp"
                style="@style/MovieCatalog.TextView.Medium"/>
            <androidx.appcompat.widget.AppCompatRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTagRating"
                app:layout_constraintStart_toEndOf="@id/imgPoster"
                app:layout_constraintEnd_toEndOf="parent"
                android:numStars="5"
                app:flow_wrapMode="aligned"
                tools:progress="5"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:isIndicator="true"
                tools:rating="2.2"
                app:layout_constraintHorizontal_bias="0"
                android:id="@+id/rating"
                android:layout_marginTop="8dp"
                android:progressTint="@color/dark_yellow"
                android:secondaryProgressTint="@android:color/darker_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Medium"
                tools:text="9.5"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/rating"
                app:layout_constraintBottom_toBottomOf="@id/rating"
                app:layout_constraintStart_toEndOf="@id/rating"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:background="@drawable/circle_outline"
                android:padding="4dp"
                android:id="@+id/tvRating"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/containerDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        android:id="@+id/containerSynopsis"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="1dp"
        android:elevation="@dimen/cardview_default_elevation"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_marginBottom="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="@tools:sample/lorem/random"
                style="@style/MovieCatalog.TextView"
                android:scrollbars="vertical"
                android:id="@+id/tvSynopsis"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/shimmerDetail"
        app:shimmer_auto_start="true"
        app:shimmer_direction="left_to_right"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <include layout="@layout/shimmer_layout_detail_film"/>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <include layout="@layout/layout_no_data"
        android:id="@+id/emptyData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="1"
        android:contentDescription="@string/btn_bookmark"
        android:id="@+id/btnBookmark"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:borderWidth="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>