...
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="0"
        android:textStyle="bold"
        android:id="@+id/tvTagRecommendation"/>
    <View
        android:layout_width="0dp"
        android:layout_height="3dp"
        app:layout_constraintStart_toEndOf="@id/tvTagRecommendation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTagRecommendation"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/layout_item_small"
        android:orientation="horizontal"
        app:layoutManager="LinearLayoutManager"
        android:id="@+id/rvRandom"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTagRecommendation"
        app:layout_constraintStart_toStartOf="parent"
...
